<resources>
    <string name="app_name">Nova Health</string>
    <string name="base_url">http://10.0.2.2:8000/</string>
    <string name="credential_emailAddress">Email Address</string>
    <string name="credential_password">Password</string>
    <string name="credential_confirmPassword">Confirm Password</string>
    <string name="credential_loginButton">Login</string>
    <string name="credential_registerTitle">Create Account</string>
    <string name="credential_registerPrompt">New here? Create your account</string>
    <string name="credential_registerButton">Register</string>
    <string name="credential_backToLogin">Back to Login</string>
    <string name="credential_fingerprintLogin">Use Biometric to Login</string>
    <string name="credential_fingerprintDialer">Fingerprint Dialer</string>
    <string name="credential_valid">Login Successful!!!</string>"
    <string name="credential_invalid">Invalid Credentials</string>
    <string name="credential_networkError">Network Error</string>
    <string name="auth_error">Authentication Error</string>
    <string name="auth_success">Authentication Successful!!!</string>
    <string name="auth_failed">Authentication Failed</string>
    <string name="token_encrypted">Token Encrypted &amp; Saved</string>
    <string name="token_decrypted">Token Decrypted</string>
    <string name="token_error">Encryption Error</string>"
    <string name="logout_label">Logout</string>
    <string name="logout_success">Logout Successful</string>
    <string name="biometric_title">Biometric Authentication</string>
    <string name="biometric_subtitle">Log in Using your Biometric Credential</string>
    <string name="biometric_enabled">Enable Biometric Login</string>
    <string name="biometric_disabled">Biometric Login Disabled</string>
    <string name="biometric_negativeButtonText">Cancel</string>
    <string name="biometric_error_no_hardware">No Biometric Features Available on this Device</string>
    <string name="biometric_error_hw_unavailable">Biometric Features are Currently Unavailable</string>
    <string name="biometric_error_none_enrolled">No Biometric Credentials are Enrolled</string>
    <string name="biometric_error_security_update_required">Security Update Required</string>
    <string name="biometric_error_unsupported">Biometric Features are Not Supported</string>
    <string name="biometric_status_unknown">Biometric Status is Unknown</string>
    <string name="biometric_login_failed">Please Login with Password First</string>
    <string name="add_item_title_preview">Add Item</string>
    <string name="close">Close</string>
    <string name="send_message">Send Message</string>
    <string name="ask_your_wellness_assistant">Ask your wellness assistant...</string>
    <string name="clear">Clear</string>
    <string name="welcome_to_nova_health">Welcome to Nova Health</string>
    <string-array name="gender_options">
        <item>Male</item>
        <item>Female</item>
        <item>Other</item>
    </string-array>
</resources>