<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/turquoise"
    android:padding="24dp"
    tools:targetApi="36">

    <EditText
        android:id="@+id/etEmailAddress"
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"
        android:layout_marginTop="128dp"
        android:minHeight="48dp"
        android:backgroundTint="@color/pale_blue"
        android:hint="@string/credential_emailAddress"
        android:autofillHints=""
        android:textColorHint="@color/baby_blue"
        android:inputType="textEmailAddress"
        android:textAlignment="center"
        android:textSize="16sp"
        android:textColor="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/etPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed" />

    <EditText
        android:id="@+id/etPassword"
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"
        android:minHeight="48dp"
        android:backgroundTint="@color/pale_blue"
        android:hint="@string/credential_password"
        android:autofillHints=""
        android:textColorHint="@color/baby_blue"
        android:inputType="textPassword"
        android:textAlignment="center"
        android:textSize="16sp"
        android:textColor="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/btnLogin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etEmailAddress" />

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="18dp"
        android:minHeight="48dp"
        android:backgroundTint="@color/dark_grey"
        android:text="@string/credential_loginButton"
        android:textAllCaps="true"
        android:textAlignment="center"
        android:textSize="14sp"
        android:textColor="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/tvFingerprintLabel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etPassword" />

    <TextView
        android:id="@+id/tvFingerprintLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="128dp"
        android:layout_marginBottom="4dp"
        android:text="@string/credential_fingerprintLogin"
        android:textSize="16sp"
        android:textColor="#CAF0F8"
        app:layout_constraintBottom_toTopOf="@+id/btnFingerprint"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnLogin" />

    <ImageButton
        android:id="@+id/btnFingerprint"
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:layout_marginTop="24dp"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:contentDescription="@string/credential_fingerprintDialer"
        android:src="@android:drawable/ic_dialog_dialer"
        android:scaleX="1.5"
        android:scaleY="1.5"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvFingerprintLabel" />

</androidx.constraintlayout.widget.ConstraintLayout>