<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/turquoise"
    android:padding="24dp">

    <TextView
        android:id="@+id/tvRegisterTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="120dp"
        android:text="Create Account"
        android:textColor="@color/white"
        android:textSize="28sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/etRegisterEmailAddress"
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="90dp"
        android:layout_marginBottom="4dp"
        android:minHeight="48dp"
        android:autofillHints=""
        android:backgroundTint="@color/pale_blue"
        android:hint="@string/credential_emailAddress"
        android:inputType="textEmailAddress"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textColorHint="@color/baby_blue"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvRegisterTitle"
        app:layout_constraintVertical_chainStyle="packed"/>

    <EditText
        android:id="@+id/etRegisterPassword"
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:minHeight="48dp"
        android:autofillHints=""
        android:backgroundTint="@color/pale_blue"
        android:hint="@string/credential_password"
        android:inputType="textPassword"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textColorHint="@color/baby_blue"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etRegisterEmailAddress"
        app:layout_constraintBottom_toTopOf="@id/etRegisterConfirmPassword"
        app:layout_constraintVertical_chainStyle="packed"/>

    <EditText
        android:id="@+id/etRegisterConfirmPassword"
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:minHeight="48dp"
        android:autofillHints=""
        android:backgroundTint="@color/pale_blue"
        android:hint="@string/credential_confirmPassword"
        android:inputType="textPassword"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textColorHint="@color/baby_blue"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etRegisterPassword"
        app:layout_constraintBottom_toTopOf="@id/btnRegister"/>

    <Button
        android:id="@+id/btnRegister"
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:minHeight="48dp"
        android:backgroundTint="@color/dark_grey"
        android:text="@string/credential_registerButton"
        android:textAllCaps="true"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etRegisterConfirmPassword"
        app:layout_constraintBottom_toTopOf="@id/btnBackToLogin"/>

    <Button
        android:id="@+id/btnBackToLogin"
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:minHeight="48dp"
        android:backgroundTint="@color/pale_blue"
        android:text="@string/credential_backToLogin"
        android:textAllCaps="true"
        android:textColor="@color/dark_grey"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnRegister" />

</androidx.constraintlayout.widget.ConstraintLayout>
